# Multi-Agent_System_CrewAI_Automate-Analyzing_Products_Dataset

./: LICENSE  README.md
ai_analysis/: README.md  pyproject.toml  report.md
ai_analysis/data/: Products.csv  cleaned_products.csv
ai_analysis/knowledge/patterns/: avg_price_by_category.txt  top_rated_brands.txt
ai_analysis/src/ai_analysis/: crew.py  main.py
ai_analysis/src/ai_analysis/config/: agents.yaml  tasks.yaml
ai_analysis/src/ai_analysis/tools/: DataAnalysisTool.py  data_manager.py  pattern_analysis_tools.py  visualization_tools.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  dumppdf.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py
