[project]
name = "ai_analysis"
version = "0.1.0"
description = "ai_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
ai_analysis = "ai_analysis.main:run"
run_crew = "ai_analysis.main:run"
train = "ai_analysis.main:train"
replay = "ai_analysis.main:replay"
test = "ai_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
